# ubuntu-autopkgtest-operators

./: .djlintrc  .gitignore  .pre-commit-config.yaml  .yamllint  README.md  TODO  pyproject.toml
.github/workflows/: pre-commit.yaml  publish-edge.yaml  publish-stable.yaml  worker-tests.yaml  zizmor.yaml
charms/: .gitignore
charms/autopkgtest-dispatcher-operator/: .charmcraft_output_packages.txt  charmcraft.yaml  pyproject.toml  requirements.txt
charms/autopkgtest-dispatcher-operator/src/: action_types.py  autopkgtest_dispatcher.py  charm.py  config_types.py  systemd_helper.py
charms/autopkgtest-dispatcher-operator/tests/: pyproject.toml  requirements.txt
charms/autopkgtest-dispatcher-operator/units/: autopkgtest@.service  filter-amqp-dupes-upstream.timer
charms/autopkgtest-janitor-operator/: README.md  charmcraft.yaml  requirements.txt
charms/autopkgtest-janitor-operator/src/: action_types.py  autopkgtest_janitor.py  charm.py  config_types.py
charms/autopkgtest-janitor-operator/units/: build-adt-container@.service  build-adt-vm@.service  build-autopkgtest-container@.service  build-autopkgtest-vm@.service
charms/autopkgtest-website-operator/: autopkgtest-db-publisher  charmcraft.yaml  pyproject.toml  requirements.txt
charms/dispatcher-operator/: charmcraft.yaml
charms/janitor-operator/: charmcraft.yaml  requirements.txt
charms/website-operator/: charmcraft.yaml  requirements.txt
docs/: administration.rst  architecture.rst  conf.py  deploying.rst  developing.rst  docs.rst  index.rst  lxd.rst  results.rst  webcontrol.rst
(+180 files in other folders)
