[project]
requires-python = ">= 3.10"

[tool.ruff]
target-version = "py312"
lint.extend-select = ["W", "I", "S", "A", "I", "PLE", "F", "D", "UP"]
lint.extend-ignore = [
    "D203",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D213",
    "D415",
    "E722",
    "E741",
    "S101",
    "S106",
    "S108",
    "S310",
    "S324",
    "S603",
    "S607",
    "S608",
]
extend-exclude = ["__pycache__", "*.egg_info", "**/lib/charms/"]

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"
